// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`articleViewed callbacks dispatches expected actions on failed request 1`] = `
Array [
  Object {
    "payload": Object {
      "articleID": 99,
      "sessionID": 1234,
    },
    "type": "widget/answerBot/ARTICLE_VIEWED_PENDING",
  },
  Object {
    "payload": Object {
      "articleID": 99,
      "error": undefined,
      "sessionID": 1234,
    },
    "type": "widget/answerBot/ARTICLE_VIEWED_REJECTED",
  },
]
`;

exports[`articleViewed callbacks dispatches expected actions on successful request 1`] = `
Array [
  Object {
    "payload": Object {
      "articleID": 99,
      "sessionID": 1234,
    },
    "type": "widget/answerBot/ARTICLE_VIEWED_PENDING",
  },
  Object {
    "payload": Object {
      "articleID": 99,
      "sessionID": 1234,
    },
    "type": "widget/answerBot/ARTICLE_VIEWED_FULFILLED",
  },
]
`;

exports[`articleViewed dispatches the expected pending actions 1`] = `
Array [
  Object {
    "payload": Object {
      "articleID": 99,
      "sessionID": 1234,
    },
    "type": "widget/answerBot/ARTICLE_VIEWED_PENDING",
  },
]
`;

exports[`articleViewed sends the expected http params 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "callbacks": Object {
          "done": [Function],
          "fail": [Function],
        },
        "method": "post",
        "params": Object {
          "article_id": 99,
          "deflection_id": 888,
          "interaction_access_token": Object {
            "y": 2,
          },
          "resolution_channel_id": 67,
        },
        "path": "/api/v2/answer_bot/viewed",
      },
    ],
  ],
  "results": undefined,
}
`;
